Permet de générer les données pour une année donnée

--- a/notebook/adhesions.ipynb
+++ b/notebook/adhesions.ipynb
@@ -16,14 +16,24 @@
     "pd.options.plotting.backend = \"plotly\"\n",
     "if dt.is_notebook():\n",
     "    __file__ = \"notebook/\"\n",
-    "\n",
+    "    \n",
     "zelty = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
-    "zelty['date'] = pd.to_datetime(zelty['date'])\n",
+    "\n",
+    "limit_year = None\n",
+    "if os.getenv(\"LIMIT_YEAR\") is not None:\n",
+    "    limit_year = os.getenv(\"LIMIT_YEAR\")\n",
+    "if limit_year:\n",
+    "    zelty = zelty[zelty['date'] <= limit_year+'-12-31']\n",
+    "\n",
     "if dt.is_notebook():\n",
-    "    print(zelty.head())\n",
+    "    print(zelty.tail())\n",
+    "zelty['date'] = pd.to_datetime(zelty['date'])\n",
     "\n",
     "events = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../events/barco_events_all.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "events['date'] = pd.to_datetime(events['date'])\n",
+    "if limit_year:\n",
+    "    events = events[events['date'] <= limit_year+'-12-31']\n",
+    "\n",
     "events.set_index('date', inplace=True)\n",
     "events_by_day = events.resample('D')['titre'].apply(' / '.join).reset_index()\n",
     "events_by_day['date'] = events_by_day['date'].apply(lambda x: str(x)[0:10])\n",
@@ -48,14 +58,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = datetime.now() + relativedelta(months=-1)\n",
+    "limit_date = datetime.fromisoformat(max(events_by_day.index)) + relativedelta(months=-1)\n",
+    "\n",
     "adhésions_last_month = adhésions[adhésions.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "adhésions_last_month = adhésions_last_month.resample('D').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
     "adhésions_last_month['évènement'] = adhésions_last_month.index.strftime('%Y-%m-%d').map(d2e).fillna('<aucun>')\n",
     "\n",
     "fig = px.bar(adhésions_last_month, y=['Nb d\\'adhésion'], hover_data=['évènement'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'adhesions_01_adhesion_des_derniers_jours')"
+    "dt.fig_save_or_show(fig, 'adhesions_01_adhesion_des_derniers_jours', limit_year)"
    ]
   },
   {
@@ -65,11 +76,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = datetime.now().replace(year=datetime.now().year - 1)\n",
+    "limit_date = datetime.fromisoformat(max(events_by_day.index)).replace(year=datetime.fromisoformat(max(events_by_day.index)).year - 1)\n",
     "adhésions_top_year = adhésions[adhésions.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "adhésions_top_year = adhésions_top_year.resample('D').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
     "if dt.is_notebook():\n",
-    "    print(adhésions_top_year.sort_values(by='Nb d\\'adhésion', ascending=False).head(20))"
+    "    print(adhésions_top_year.sort_values(by='Nb d\\'adhésion', ascending=False).head(20))\n",
+    "limit_date"
    ]
   },
   {
@@ -86,7 +98,7 @@
     "\n",
     "fig = px.bar(adhésions_by_month)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'adhesions_02_adhesion_par_mois')"
+    "dt.fig_save_or_show(fig, 'adhesions_02_adhesion_par_mois', limit_year)"
    ]
   },
   {
@@ -111,11 +123,11 @@
     "\n",
     "adhésions_a_date = adhésions.copy()\n",
     "adhésions_a_date['a_date'] = adhésions_a_date.index.month*100+adhésions_a_date.index.day\n",
-    "adhésions_a_date = adhésions_a_date[adhésions_a_date['a_date'] < datetime.now().month*100+datetime.now().day]\n",
+    "adhésions_a_date = adhésions_a_date[adhésions_a_date['a_date'] < max(adhésions.index).month*100+max(adhésions.index).day]\n",
     "del adhésions_a_date['a_date']\n",
     "adhésions_a_date = adhésions_a_date.resample('Y').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
     "adhésions_a_date.index = adhésions_a_date.index.year\n",
-    "libelle_a_date = \"À date du %02d/%02d\" % (datetime.now().day, datetime.now().month)\n",
+    "libelle_a_date = \"À date du %02d/%02d\" % (max(adhésions.index).day, max(adhésions.index).month)\n",
     "adhésions_by_year[libelle_a_date] = adhésions_a_date['Nb d\\'adhésion']\n",
     "#adhésions_by_year.histogram()\n",
     "adhésions_by_year.fillna(0, inplace=True)\n",
@@ -132,7 +144,7 @@
     "fig.update_layout(separators=', ')\n",
     "fig.update_yaxes(tickformat=\",d\")\n",
     "\n",
-    "dt.fig_save_or_show(fig, 'adhesions_03_adhesion_par_an')"
+    "dt.fig_save_or_show(fig, 'adhesions_03_adhesion_par_an', limit_year)"
    ]
   },
   {
@@ -160,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
