--- a/notebook/evenements.ipynb
+++ b/notebook/evenements.ipynb
@@ -18,6 +18,13 @@
     "    __file__ = \"notebook/\"\n",
     "\n",
     "events = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../events/barco_events_all.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
+    "\n",
+    "limit_year = None\n",
+    "if os.getenv(\"LIMIT_YEAR\") is not None:\n",
+    "    limit_year = os.getenv(\"LIMIT_YEAR\")\n",
+    "if limit_year:\n",
+    "    events = events[events['date'] <= limit_year+'-12-31']\n",
+    "\n",
     "events['date'] = pd.to_datetime(events['date'])\n",
     "events.set_index('date', inplace=True)\n",
     "events_by_day = events.resample('D')['titre'].apply(' / '.join).reset_index()\n",
@@ -36,13 +43,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = datetime.now() + relativedelta(months=-1)\n",
+    "limit_date = max(events.index) + relativedelta(months=-1)\n",
     "events_par_semaine = events[events.index > str(limit_date)[0:19]]\n",
     "events_par_semaine['titre'] = events_par_semaine['titre'].apply(lambda x: x[:50])\n",
     "events_par_semaine = events_par_semaine.resample('W')[['url', 'titre']].aggregate({'url': 'count', 'titre': \" | \".join}).rename(columns={'url': 'Nb évènements'})\n",
     "\n",
-    "events_par_semaine[\"Nb d'évènements\"] = events_par_semaine[events_par_semaine.index <= datetime.now().isoformat()][\"Nb évènements\"]\n",
-    "events_par_semaine[\"Nb d'évènements futurs\"] = events_par_semaine[events_par_semaine.index > datetime.now().isoformat()][\"Nb évènements\"]\n",
+    "events_par_semaine[\"Nb d'évènements\"] = events_par_semaine[events_par_semaine.index <= max(events.index).isoformat()][\"Nb évènements\"]\n",
+    "events_par_semaine[\"Nb d'évènements futurs\"] = events_par_semaine[events_par_semaine.index > max(events.index).isoformat()][\"Nb évènements\"]\n",
     "events_par_semaine['titre'] = events_par_semaine['titre'].apply(lambda x: x[:125])\n",
     "\n",
     "del events_par_semaine[\"Nb évènements\"]\n",
@@ -53,7 +60,7 @@
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "fig.update_yaxes(dtick=\"n\")\n",
     "\n",
-    "dt.fig_save_or_show(fig, 'evenements_01_events_par_semaine')"
+    "dt.fig_save_or_show(fig, 'evenements_01_events_par_semaine', limit_year)"
    ]
   },
   {
@@ -67,7 +74,7 @@
     "\n",
     "fig = px.bar(events_mensuels_par_an)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'evenements_02_events_mensuels_par_an')"
+    "dt.fig_save_or_show(fig, 'evenements_02_events_mensuels_par_an', limit_year)"
    ]
   },
   {
@@ -85,7 +92,7 @@
     "\n",
     "fig = px.bar(events_par_an)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'evenements_03_events_par_an')"
+    "dt.fig_save_or_show(fig, 'evenements_03_events_par_an', limit_year)"
    ]
   },
   {
@@ -97,6 +104,8 @@
    "source": [
     "zelty = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "zelty['date'] = pd.to_datetime(zelty['date']).apply(lambda x: str(x)[0:10])\n",
+    "if (limit_year):\n",
+    "    zelty = zelty[zelty['date'] <= limit_year+'-12-31']\n",
     "zelty_by_day = zelty.groupby('date')[['price']].sum()\n",
     "zelty_by_day['evenement'] = zelty_by_day.index.map(d2e)\n",
     "#zelty_by_day.sort_values('price', ascending=False).dropna()\n"
@@ -114,7 +123,7 @@
     "zelty_by_day['adhésions'] = adhésions['adhésions']\n",
     "zelty_by_day['jour'] = pd.to_datetime(zelty_by_day.index).strftime('%A') \n",
     "evenement_adhesion_prix = zelty_by_day.dropna().sort_index(ascending=False)[['jour','evenement', 'adhésions', 'price']]\n",
-    "dt.true_or_html_to_file(evenement_adhesion_prix, 'evenements_04_adhesion_prix') and evenement_adhesion_prix"
+    "dt.true_or_html_to_file(evenement_adhesion_prix, 'evenements_04_adhesion_prix', limit_year) and evenement_adhesion_prix"
    ]
   },
   {
