--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -19,10 +19,17 @@
     "    __file__ = \"notebook/\"\n",
     "\n",
     "services_baristas_annule = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../calendar/baristas.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
+    "\n",
+    "limit_year = None\n",
+    "if os.getenv(\"LIMIT_YEAR\") is not None:\n",
+    "    limit_year = os.getenv(\"LIMIT_YEAR\")\n",
+    "if limit_year:\n",
+    "    services_baristas_annule = services_baristas_annule[services_baristas_annule['date'] <= limit_year+'-12-31']\n",
+    "\n",
     "services_baristas_annule['Mois'] = pd.to_datetime(services_baristas_annule['date'].apply(lambda x: x[0:7]+'-01'))\n",
     "services_baristas_annule['Date'] = pd.to_datetime(services_baristas_annule['date'])\n",
     "del services_baristas_annule['date']\n",
-    "services_baristas_annule = services_baristas_annule[services_baristas_annule['Date'] < str(datetime.now())]\n",
+    "services_baristas_annule = services_baristas_annule[services_baristas_annule['Date'] <= str(max(services_baristas_annule['Date']))]\n",
     "services_baristas_annule['nom'] = services_baristas_annule['nom'].str.title()\n",
     "t2n = services_baristas_annule.groupby('telephone')['nom'].first().to_dict()\n",
     "n2t = services_baristas_annule.groupby('nom')['telephone'].first().to_dict()\n",
@@ -53,7 +60,7 @@
     "\n",
     "fig = px.bar(creneaux_annules)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'baristas_01_creneaux_annules')"
+    "dt.fig_save_or_show(fig, 'baristas_01_creneaux_annules', limit_year)"
    ]
   },
   {
@@ -63,7 +70,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date_year = datetime.now() + relativedelta(months=-6)\n",
+    "limit_date_year = max(services_baristas_annule['Mois']) + relativedelta(months=-6)\n",
     "creneaux_annules_year = services_baristas_annule[services_baristas_annule['Mois'] > limit_date_year]\n",
     "creneaux_annules_year['Nb services annulés'] = creneaux_annules_year['role'].apply(lambda x : 1 if x == \"CRENEAU ANNULE\" else 0)\n",
     "creneaux_annules_year['Service Semaine Order'] = creneaux_annules_year['Date'].dt.weekday.map(str)+' '+creneaux_annules_year['Date'].dt.day_name(locale='fr_FR.utf8')+' '+creneaux_annules_year['Date'].dt.time.map(str)\n",
@@ -75,7 +82,7 @@
     "creneaux_annules_semaine\n",
     "fig = px.bar(creneaux_annules_semaine['Nb services annulés'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'baristas_11_creneaux_annules_semaine')\n"
+    "dt.fig_save_or_show(fig, 'baristas_11_creneaux_annules_semaine', limit_year)\n"
    ]
   },
   {
@@ -123,7 +130,7 @@
    "source": [
     "fig = px.bar(nb_baristas[['Nb de baristas']].stack('Année').groupby('Année').sum())\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'baristas_02_nb_baristas_par_an')"
+    "dt.fig_save_or_show(fig, 'baristas_02_nb_baristas_par_an', limit_year)"
    ]
   },
   {
@@ -137,7 +144,7 @@
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "fig.update_layout(separators=', ')\n",
     "fig.update_yaxes(tickformat=\",d\")\n",
-    "dt.fig_save_or_show(fig, 'baristas_03_nb_services_realises_par_an')"
+    "dt.fig_save_or_show(fig, 'baristas_03_nb_services_realises_par_an', limit_year)"
    ]
   },
   {
@@ -149,7 +156,7 @@
    "source": [
     "fig = px.bar(nb_baristas['Nb de baristas'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'baristas_04_nb_baristas_par_mois')"
+    "dt.fig_save_or_show(fig, 'baristas_04_nb_baristas_par_mois', limit_year)"
    ]
   },
   {
@@ -161,7 +168,7 @@
    "source": [
     "fig = px.bar(nb_baristas['Nb de services réalisés'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'baristas_05_nb_services_réalisés_par_mois')"
+    "dt.fig_save_or_show(fig, 'baristas_05_nb_services_réalisés_par_mois', limit_year)"
    ]
   },
   {
@@ -188,7 +195,7 @@
    "source": [
     "fig = px.bar(services['count'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'baristas_06_nb_referents_par_mois')"
+    "dt.fig_save_or_show(fig, 'baristas_06_nb_referents_par_mois', limit_year)"
    ]
   },
   {
@@ -205,7 +212,7 @@
     "\n",
     "fig = px.bar(nb_services)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
-    "dt.fig_save_or_show(fig, 'baristas_07_nb_services_ouverts')"
+    "dt.fig_save_or_show(fig, 'baristas_07_nb_services_ouverts', limit_year)"
    ]
   },
   {
@@ -215,7 +222,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date_year = datetime.now() + relativedelta(years=-1)\n",
+    "limit_date_year = max(services_baristas['Mois']) + relativedelta(years=-1)\n",
     "services_baristas_year = services_baristas[services_baristas['Mois'] > limit_date_year]\n",
     "services_baristas_year['is_premier_service_12_mois'] = services_baristas_year['Date premier service'] >= (max(services_baristas_year['Date premier service']) + relativedelta(years=-1)).isoformat()\n",
     "services_baristas_year['is_not_premier_service_12_mois'] = services_baristas_year['Date premier service'] < (max(services_baristas_year['Date premier service']) + relativedelta(years=-1)).isoformat()\n",
@@ -233,7 +240,7 @@
     "fig = px.bar(graph_baristas_year)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "fig.update_xaxes(showticklabels=False)\n",
-    "dt.fig_save_or_show(fig, 'baristas_08_nb_services_par_baristas_12_mois')"
+    "dt.fig_save_or_show(fig, 'baristas_08_nb_services_par_baristas_12_mois', limit_year)"
    ]
   },
   {
