--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -18,6 +18,13 @@
     "    __file__ = \"notebook/\"\n",
     "\n",
     "zelty = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../zelty/zelty.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
+    "\n",
+    "limit_year = None\n",
+    "if os.getenv(\"LIMIT_YEAR\") is not None:\n",
+    "    limit_year = os.getenv(\"LIMIT_YEAR\")\n",
+    "if limit_year:\n",
+    "    zelty = zelty[zelty['date'] <= limit_year+'-12-31']\n",
+    "\n",
     "zelty['date'] = pd.to_datetime(zelty['date'])\n",
     "zelty.rename(columns={'category': 'Type de produit', 'price': 'Prix'}, inplace=True)\n",
     "if dt.is_notebook():\n",
@@ -52,7 +59,7 @@
     "fig = px.bar(chiffredaffaire_par_an)\n",
     "fig.update_layout(legend_title=\"Type de produit\",xaxis_title=None,yaxis_title=None,separators=\", \")\n",
     "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
-    "dt.fig_save_or_show(fig, 'recettes_01_ca_par_categories_et_an')"
+    "dt.fig_save_or_show(fig, 'recettes_01_ca_par_categories_et_an', limit_year)"
    ]
   },
   {
@@ -72,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chiffredaffaire_12_mois = zelty[zelty.date > str(datetime.now().replace(year=datetime.now().year - 1))]\n",
+    "chiffredaffaire_12_mois = zelty[zelty.date > str(max(zelty.date).year - 1)]\n",
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois.groupby(['date', 'pid'])[['Prix']].sum().reset_index()\n",
     "chiffredaffaire_12_mois['produit'] = chiffredaffaire_12_mois['pid'].map(pid2produit)\n",
     "chiffredaffaire_12_mois['produit'] = chiffredaffaire_12_mois['produit'].apply(lambda x: re.sub(r'  *', ' ', x)[:25].title())\n",
@@ -85,7 +92,7 @@
     "fig = px.bar(chiffredaffaire_12_mois.dropna())\n",
     "fig.update_layout(legend_title=\"Produit\",xaxis_title=None,yaxis_title=None,separators=', ')\n",
     "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
-    "dt.fig_save_or_show(fig, 'recettes_02_ca_par_produits_12_mois')"
+    "dt.fig_save_or_show(fig, 'recettes_02_ca_par_produits_12_mois', limit_year)"
    ]
   },
   {
@@ -100,12 +107,12 @@
     "\n",
     "chiffredaffaire_a_date = chiffredaffaire.stack('Type de produit').reset_index().groupby('date')[['Prix']].sum()\n",
     "chiffredaffaire_a_date['a_date'] = chiffredaffaire_a_date.index.month*100+chiffredaffaire_a_date.index.day\n",
-    "chiffredaffaire_a_date = chiffredaffaire_a_date[chiffredaffaire_a_date['a_date'] < datetime.now().month*100+datetime.now().day]\n",
+    "chiffredaffaire_a_date = chiffredaffaire_a_date[chiffredaffaire_a_date['a_date'] < max(zelty.date).month*100+max(zelty.date).day]\n",
     "del chiffredaffaire_a_date['a_date']\n",
     "chiffredaffaire_a_date = chiffredaffaire_a_date.resample('Y').sum()\n",
     "chiffredaffaire_a_date.index = chiffredaffaire_a_date.index.year\n",
     "chiffredaffaire_a_date\n",
-    "libelle_a_date = \"à date du %02d/%02d\" % (datetime.now().day, datetime.now().month)\n",
+    "libelle_a_date = \"à date du %02d/%02d\" % (max(zelty.date).day, max(zelty.date).month)\n",
     "chiffredaffaire_total_by_year[libelle_a_date] = chiffredaffaire_a_date['Prix']\n",
     "chiffredaffaire_total_by_year.fillna(0, inplace=True)\n",
     "chiffredaffaire_total_by_year['Toute l\\'année'] = chiffredaffaire_total_by_year['Prix']\n",
@@ -120,7 +127,7 @@
     "])\n",
     "fig.update_layout(xaxis_title=None,yaxis_title=None,separators=', ')\n",
     "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
-    "dt.fig_save_or_show(fig, 'recettes_03_ca_total_par_an')"
+    "dt.fig_save_or_show(fig, 'recettes_03_ca_total_par_an', limit_year)"
    ]
   },
   {
@@ -130,7 +137,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = datetime.now().replace(year=datetime.now().year - 1)\n",
+    "limit_date = max(zelty.date).replace(year=max(zelty.date).year - 1)\n",
     "chiffredaffaire_year = chiffredaffaire[chiffredaffaire.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "chiffredaffaire_year.columns = chiffredaffaire_year.columns.droplevel(0)\n",
     "chiffredaffaire_year = chiffredaffaire_year.groupby('date').sum()\n",
@@ -166,7 +173,7 @@
     "fig = px.bar(chiffredaffaire_year, y=['total'], hover_data=['évènement', 'jour'])\n",
     "fig.update_layout(xaxis_title=None,yaxis_title=None,separators=', ')\n",
     "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
-    "dt.fig_save_or_show(fig, 'recettes_04_ca_quotidien_12_mois')"
+    "dt.fig_save_or_show(fig, 'recettes_04_ca_quotidien_12_mois', limit_year)"
    ]
   },
   {
@@ -196,7 +203,7 @@
     "fig = px.bar(chiffredaffaire_top_year, y=[False,True], hover_data=['évènement', 'jour'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None,separators=', ')\n",
     "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
-    "dt.fig_save_or_show(fig, 'recettes_05_ca_quotidien_top50_12_mois')"
+    "dt.fig_save_or_show(fig, 'recettes_05_ca_quotidien_top50_12_mois', limit_year)"
    ]
   },
   {
@@ -259,7 +266,7 @@
     "fig = px.bar(benefices)\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None,separators=', ')\n",
     "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
-    "dt.fig_save_or_show(fig, 'recettes_06_benefice')"
+    "dt.fig_save_or_show(fig, 'recettes_06_benefice', limit_year)"
    ]
   },
   {
