Permet d'avoir des chiffres sur une année civile précédente

--- a/notebook/adhesions.ipynb
+++ b/notebook/adhesions.ipynb
@@ -58,8 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = datetime.fromisoformat(max(events_by_day.index)) + relativedelta(months=-1)\n",
-    "\n",
+    "limit_date = max(adhésions.index) + relativedelta(months=-1)\n",
     "adhésions_last_month = adhésions[adhésions.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "adhésions_last_month = adhésions_last_month.resample('D').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
     "adhésions_last_month['évènement'] = adhésions_last_month.index.strftime('%Y-%m-%d').map(d2e).fillna('<aucun>')\n",
@@ -76,12 +75,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = datetime.fromisoformat(max(events_by_day.index)).replace(year=datetime.fromisoformat(max(events_by_day.index)).year - 1)\n",
     "adhésions_top_year = adhésions[adhésions.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "adhésions_top_year = adhésions_top_year.resample('D').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
     "if dt.is_notebook():\n",
-    "    print(adhésions_top_year.sort_values(by='Nb d\\'adhésion', ascending=False).head(20))\n",
-    "limit_date"
+    "    print(adhésions_top_year.sort_values(by='Nb d\\'adhésion', ascending=False).head(20))"
    ]
   },
   {
