Meilleure prise en compte du moment présent

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -19,17 +19,19 @@
     "    __file__ = \"notebook/\"\n",
     "\n",
     "services_baristas_annule = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../calendar/baristas.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
+    "services_baristas_annule['Mois'] = pd.to_datetime(services_baristas_annule['date'].apply(lambda x: x[0:7]+'-01'))\n",
+    "services_baristas_annule['Date'] = pd.to_datetime(services_baristas_annule['date'])\n",
+    "del services_baristas_annule['date']\n",
     "\n",
     "limit_year = None\n",
     "if os.getenv(\"LIMIT_YEAR\") is not None:\n",
     "    limit_year = os.getenv(\"LIMIT_YEAR\")\n",
+    "now = datetime.now()\n",
     "if limit_year:\n",
     "    services_baristas_annule = services_baristas_annule[services_baristas_annule['date'] <= limit_year+'-12-31']\n",
+    "    now = max(services_baristas_annule['Mois'])\n",
     "\n",
-    "services_baristas_annule['Mois'] = pd.to_datetime(services_baristas_annule['date'].apply(lambda x: x[0:7]+'-01'))\n",
-    "services_baristas_annule['Date'] = pd.to_datetime(services_baristas_annule['date'])\n",
-    "del services_baristas_annule['date']\n",
-    "services_baristas_annule = services_baristas_annule[services_baristas_annule['Date'] <= str(max(services_baristas_annule['Date']))]\n",
+    "services_baristas_annule = services_baristas_annule[services_baristas_annule['Date'] <= str(now)]\n",
     "services_baristas_annule['nom'] = services_baristas_annule['nom'].str.title()\n",
     "t2n = services_baristas_annule.groupby('telephone')['nom'].first().to_dict()\n",
     "n2t = services_baristas_annule.groupby('nom')['telephone'].first().to_dict()\n",
@@ -70,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date_year = max(services_baristas_annule['Mois']) + relativedelta(months=-6)\n",
+    "limit_date_year = now + relativedelta(months=-6)\n",
     "creneaux_annules_year = services_baristas_annule[services_baristas_annule['Mois'] > limit_date_year]\n",
     "creneaux_annules_year['Nb services annulés'] = creneaux_annules_year['role'].apply(lambda x : 1 if x == \"CRENEAU ANNULE\" else 0)\n",
     "creneaux_annules_year['Service Semaine Order'] = creneaux_annules_year['Date'].dt.weekday.map(str)+' '+creneaux_annules_year['Date'].dt.day_name(locale='fr_FR.utf8')+' '+creneaux_annules_year['Date'].dt.time.map(str)\n",
@@ -222,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date_year = max(services_baristas['Mois']) + relativedelta(years=-1)\n",
+    "limit_date_year = now + relativedelta(years=-1)\n",
     "services_baristas_year = services_baristas[services_baristas['Mois'] > limit_date_year]\n",
     "services_baristas_year['is_premier_service_12_mois'] = services_baristas_year['Date premier service'] >= (max(services_baristas_year['Date premier service']) + relativedelta(years=-1)).isoformat()\n",
     "services_baristas_year['is_not_premier_service_12_mois'] = services_baristas_year['Date premier service'] < (max(services_baristas_year['Date premier service']) + relativedelta(years=-1)).isoformat()\n",
