--- a/notebook/evenements.ipynb
+++ b/notebook/evenements.ipynb
@@ -43,13 +43,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = max(events.index) + relativedelta(months=-1)\n",
+    "if limit_year:\n",
+    "    now = max(events.index)\n",
+    "else:\n",
+    "    now = datetime.now()\n",
+    "limit_date = datetime.now() + relativedelta(months=-1)\n",
+    "\n",
     "events_par_semaine = events[events.index > str(limit_date)[0:19]]\n",
     "events_par_semaine['titre'] = events_par_semaine['titre'].apply(lambda x: x[:50])\n",
     "events_par_semaine = events_par_semaine.resample('W')[['url', 'titre']].aggregate({'url': 'count', 'titre': \" | \".join}).rename(columns={'url': 'Nb évènements'})\n",
     "\n",
-    "events_par_semaine[\"Nb d'évènements\"] = events_par_semaine[events_par_semaine.index <= max(events.index).isoformat()][\"Nb évènements\"]\n",
-    "events_par_semaine[\"Nb d'évènements futurs\"] = events_par_semaine[events_par_semaine.index > max(events.index).isoformat()][\"Nb évènements\"]\n",
+    "events_par_semaine[\"Nb d'évènements\"] = events_par_semaine[events_par_semaine.index <= now.isoformat()][\"Nb évènements\"]\n",
+    "events_par_semaine[\"Nb d'évènements futurs\"] = events_par_semaine[events_par_semaine.index > now.isoformat()][\"Nb évènements\"]\n",
     "events_par_semaine['titre'] = events_par_semaine['titre'].apply(lambda x: x[:125])\n",
     "\n",
     "del events_par_semaine[\"Nb évènements\"]\n",
