Bug dans le nombre de barista par an

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -115,12 +115,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nb_baristas = services_baristas.groupby(['Mois','nom','telephone'])[['role']].count().rename(columns= {'role': 'nb'})\n",
-    "nb_baristas = nb_baristas.groupby('Mois').aggregate(func=['count', 'sum'])\n",
-    "nb_baristas.columns = nb_baristas.columns.droplevel(0)\n",
-    "nb_baristas = nb_baristas.rename(columns={'count': 'Nb de baristas', 'sum': 'Nb de services réalisés'})\n",
-    "nb_baristas['Année'] = nb_baristas.index.year\n",
-    "nb_baristas = nb_baristas.reset_index().set_index(['Mois', 'Année']).unstack('Année').fillna(0)"
+    "nb_baristas = services_baristas.groupby(['Mois','nom','telephone'])[['role']].count().rename(columns= {'role': 'nb'}).reset_index()\n",
+    "nb_baristas['Année'] = nb_baristas['Mois'].apply(lambda x: x.year)\n",
+    "\n",
+    "nb_baristas_mois = nb_baristas.groupby('Mois').aggregate(func=['count', 'sum'])[['nb']]\n",
+    "nb_baristas_mois.columns = nb_baristas_mois.columns.droplevel(0)\n",
+    "nb_baristas_mois = nb_baristas_mois[['count', 'sum']]\n",
+    "nb_baristas_mois = nb_baristas_mois.rename(columns={'count': 'Nb de baristas', 'sum': 'Nb de services réalisés'})\n",
+    "nb_baristas_mois['Année'] = nb_baristas_mois.index.year\n",
+    "\n",
+    "nb_baristas_ans = nb_baristas.groupby(['Année','nom','telephone'])[['nb']].sum().reset_index().groupby('Année')[['nb']].aggregate(func=['count', 'sum'])\n",
+    "nb_baristas_ans.columns = nb_baristas_ans.columns.droplevel(0)\n",
+    "nb_baristas_ans = nb_baristas_ans.rename(columns={'count': 'Nb de baristas', 'sum': 'Nb de services réalisés'})"
    ]
   },
   {
@@ -130,7 +136,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(nb_baristas[['Nb de baristas']].stack('Année').groupby('Année').sum())\n",
+    "fig = px.bar(nb_baristas_ans[['Nb de baristas']])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'baristas_02_nb_baristas_par_an', limit_year)"
    ]
@@ -142,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(nb_baristas[['Nb de services réalisés']].stack('Année').groupby('Année').sum())\n",
+    "fig = px.bar(nb_baristas_ans[['Nb de services réalisés']])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "fig.update_layout(separators=', ')\n",
     "fig.update_yaxes(tickformat=\",d\")\n",
@@ -156,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(nb_baristas['Nb de baristas'])\n",
+    "fig = px.bar(nb_baristas_mois['Nb de baristas'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'baristas_04_nb_baristas_par_mois', limit_year)"
    ]
@@ -168,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = px.bar(nb_baristas['Nb de services réalisés'])\n",
+    "fig = px.bar(nb_baristas_mois['Nb de services réalisés'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'baristas_05_nb_services_réalisés_par_mois', limit_year)"
    ]
