Se base toujours sur le même champs

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -26,9 +26,10 @@
     "limit_year = None\n",
     "if os.getenv(\"LIMIT_YEAR\") is not None:\n",
     "    limit_year = os.getenv(\"LIMIT_YEAR\")\n",
+    "limit_year = \"2023\"\n",
     "now = datetime.now()\n",
     "if limit_year:\n",
-    "    services_baristas_annule = services_baristas_annule[services_baristas_annule['date'] <= limit_year+'-12-31']\n",
+    "    services_baristas_annule = services_baristas_annule[services_baristas_annule['Mois'] <= limit_year+'-12-31']\n",
     "    now = max(services_baristas_annule['Mois'])\n",
     "\n",
     "services_baristas_annule = services_baristas_annule[services_baristas_annule['Date'] <= str(now)]\n",
