Correction des erreurs liées à la non détection des catégories des nouveaux produits

--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -25,6 +25,7 @@
     "if limit_year:\n",
     "    zelty = zelty[zelty['date'] <= limit_year+'-12-31']\n",
     "\n",
+    "zelty['category'] = zelty['category'].fillna('Catégorie inconnue')\n",
     "zelty['date'] = pd.to_datetime(zelty['date'])\n",
     "zelty.rename(columns={'category': 'Type de produit', 'price': 'Prix'}, inplace=True)\n",
     "if dt.is_notebook():\n",
