Pour avoir le début du mois de l'année dernière, il faut prendre plus qu'il y a 12 mois

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date_year = now + relativedelta(years=-1)\n",
+    "limit_date_year = now + relativedelta(years=-1, months=-1)\n",
     "services_baristas_year = services_baristas[services_baristas['Mois'] > limit_date_year]\n",
     "services_baristas_year['is_premier_service_12_mois'] = services_baristas_year['Date premier service'] >= (max(services_baristas_year['Date premier service']) + relativedelta(years=-1)).isoformat()\n",
     "services_baristas_year['is_not_premier_service_12_mois'] = services_baristas_year['Date premier service'] < (max(services_baristas_year['Date premier service']) + relativedelta(years=-1)).isoformat()\n",
