--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -221,7 +221,8 @@
     "          2021:0.5078,\n",
     "          2022:0.3363,\n",
     "          2023:0.4644, #(achat - variation) / vente de marchandises  / issu de https://drive.google.com/file/d/1WaKuL7ZqgIsmStzPALoVjKgcIRJSeLTx/view\n",
-    "          2024:0.46\n",
+    "          2024:0.46,\n",
+    "          2025:0.46\n",
     "         }\n"
    ]
   },
@@ -239,7 +240,8 @@
     "           2021:30298-40000,\n",
     "           2022:45886,\n",
     "           2023:47692, #charge du rapport AG 06/2024 : https://drive.google.com/file/d/1WaKuL7ZqgIsmStzPALoVjKgcIRJSeLTx/view\n",
-    "           2024:55889 #Issu prévisionnel AG 06/2024 : https://drive.google.com/file/d/1WaKuL7ZqgIsmStzPALoVjKgcIRJSeLTx/view\n",
+    "           2024:55889, #Issu prévisionnel AG 06/2024 : https://drive.google.com/file/d/1WaKuL7ZqgIsmStzPALoVjKgcIRJSeLTx/view\n",
+    "           2025:55889\n",
     "          }\n"
    ]
   },
