On retire les ventes coutant

--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -28,6 +28,10 @@
     "zelty['category'] = zelty['category'].fillna('Catégorie inconnue')\n",
     "zelty['date'] = pd.to_datetime(zelty['date'])\n",
     "zelty.rename(columns={'category': 'Type de produit', 'price': 'Prix'}, inplace=True)\n",
+    "\n",
+    "#Prix coutant retiré (vente de bière et de soft aux membres actifs)\n",
+    "zelty = zelty[zelty['Type de produit'] != 'Vente coutant'] \n",
+    "\n",
     "if dt.is_notebook():\n",
     "    print(zelty.head())"
    ]
