Publication des dernières recettes quotidiennes

--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "import os\n",
-    "from datetime import datetime\n",
+    "import datetime\n",
     "import mydashtools as dt\n",
     "import plotly.express as px\n",
     "import re\n",
@@ -31,6 +31,8 @@
     "\n",
     "#Prix coutant retiré (vente de bière et de soft aux membres actifs)\n",
     "zelty = zelty[zelty['Type de produit'] != 'Vente coutant'] \n",
+    "\n",
+    "last_date = max(zelty.date)\n",
     "\n",
     "if dt.is_notebook():\n",
     "    print(zelty.head())"
@@ -84,7 +86,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chiffredaffaire_12_mois = zelty[zelty.date > str(max(zelty.date).year - 1)]\n",
+    "chiffredaffaire_12_mois = zelty[zelty.date > str(last_date.year - 1)]\n",
     "chiffredaffaire_12_mois = chiffredaffaire_12_mois.groupby(['date', 'pid'])[['Prix']].sum().reset_index()\n",
     "chiffredaffaire_12_mois['produit'] = chiffredaffaire_12_mois['pid'].map(pid2produit)\n",
     "chiffredaffaire_12_mois['produit'] = chiffredaffaire_12_mois['produit'].apply(lambda x: re.sub(r'  *', ' ', x)[:25].title())\n",
@@ -107,17 +109,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chiffredaffaire_total_by_year = chiffredaffaire.stack('Type de produit').reset_index().groupby('date')[['Prix']].sum().resample('Y').sum()\n",
+    "chiffredaffaire_total_by_year = chiffredaffaire.stack('Type de produit').reset_index().groupby('date')[['Prix']].sum().resample('YE').sum()\n",
     "chiffredaffaire_total_by_year.index = chiffredaffaire_total_by_year.index.year\n",
     "\n",
     "chiffredaffaire_a_date = chiffredaffaire.stack('Type de produit').reset_index().groupby('date')[['Prix']].sum()\n",
     "chiffredaffaire_a_date['a_date'] = chiffredaffaire_a_date.index.month*100+chiffredaffaire_a_date.index.day\n",
-    "chiffredaffaire_a_date = chiffredaffaire_a_date[chiffredaffaire_a_date['a_date'] < max(zelty.date).month*100+max(zelty.date).day]\n",
+    "chiffredaffaire_a_date = chiffredaffaire_a_date[chiffredaffaire_a_date['a_date'] < last_date.month*100+last_date.day]\n",
     "del chiffredaffaire_a_date['a_date']\n",
-    "chiffredaffaire_a_date = chiffredaffaire_a_date.resample('Y').sum()\n",
+    "chiffredaffaire_a_date = chiffredaffaire_a_date.resample('YE').sum()\n",
     "chiffredaffaire_a_date.index = chiffredaffaire_a_date.index.year\n",
     "chiffredaffaire_a_date\n",
-    "libelle_a_date = \"à date du %02d/%02d\" % (max(zelty.date).day, max(zelty.date).month)\n",
+    "libelle_a_date = \"à date du %02d/%02d\" % (last_date.day, last_date.month)\n",
     "chiffredaffaire_total_by_year[libelle_a_date] = chiffredaffaire_a_date['Prix']\n",
     "chiffredaffaire_total_by_year.fillna(0, inplace=True)\n",
     "chiffredaffaire_total_by_year['Toute l\\'année'] = chiffredaffaire_total_by_year['Prix']\n",
@@ -142,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = max(zelty.date).replace(year=max(zelty.date).year - 1)\n",
+    "limit_date = last_date.replace(year=last_date.year - 1)\n",
     "chiffredaffaire_year = chiffredaffaire[chiffredaffaire.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "chiffredaffaire_year.columns = chiffredaffaire_year.columns.droplevel(0)\n",
     "chiffredaffaire_year = chiffredaffaire_year.groupby('date').sum()\n",
@@ -168,27 +170,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "134c4b65",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "chiffredaffaire_year['évènement'] = chiffredaffaire_year.index.strftime('%Y-%m-%d').map(d2e).fillna('')\n",
-    "chiffredaffaire_year['jour'] = chiffredaffaire_year.index.strftime('%A')\n",
-    "\n",
-    "fig = px.bar(chiffredaffaire_year, y=['total'], hover_data=['évènement', 'jour'])\n",
-    "fig.update_layout(xaxis_title=None,yaxis_title=None,separators=', ')\n",
-    "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
-    "dt.fig_save_or_show(fig, 'recettes_04_ca_quotidien_12_mois', limit_year)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "a342f927",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import datetime \n",
     "from dateutil.relativedelta import relativedelta \n",
     "\n",
     "chiffredaffaire_top_year = chiffredaffaire_year.sort_values(by='total', ascending=False)\n",
@@ -283,8 +268,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "if dt.is_notebook():\n",
-    "    print(benefices.sum())"
+    "chiffredaffaire_year['évènement'] = chiffredaffaire_year.index.strftime('%Y-%m-%d').map(d2e).fillna('')\n",
+    "chiffredaffaire_year['jour'] = chiffredaffaire_year.index.strftime('%A')\n",
+    "limit_date = str(last_date - datetime.timedelta(days=62))[:10]\n",
+    "chiffredaffaire_quotidien = chiffredaffaire_year[chiffredaffaire_year.index > limit_date]\n",
+    "fig = px.bar(chiffredaffaire_quotidien, y=['total'], hover_data=['évènement', 'jour'])\n",
+    "fig.update_layout(xaxis_title=None,yaxis_title=None,separators=', ',showlegend=False)\n",
+    "fig.update_yaxes(tickformat=\",d\",ticksuffix=\" €\")\n",
+    "fig.add_hline(y=charges[last_date.year]*1/marges[last_date.year]/230)\n",
+    "dt.fig_save_or_show(fig, 'recettes_04_ca_quotidien_2_mois', limit_year)"
    ]
   },
   {
@@ -301,7 +293,10 @@
    "id": "5c82b88c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "if dt.is_notebook():\n",
+    "    print(benefices.sum())"
+   ]
   }
  ],
  "metadata": {
