Sample qui fonctionne avec des versions un peu plus vieille de panda

--- a/notebook/recettes.ipynb
+++ b/notebook/recettes.ipynb
@@ -109,14 +109,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chiffredaffaire_total_by_year = chiffredaffaire.stack('Type de produit').reset_index().groupby('date')[['Prix']].sum().resample('YE').sum()\n",
+    "chiffredaffaire_total_by_year = chiffredaffaire.stack('Type de produit').reset_index().groupby('date')[['Prix']].sum().resample('Y').sum()\n",
     "chiffredaffaire_total_by_year.index = chiffredaffaire_total_by_year.index.year\n",
     "\n",
     "chiffredaffaire_a_date = chiffredaffaire.stack('Type de produit').reset_index().groupby('date')[['Prix']].sum()\n",
     "chiffredaffaire_a_date['a_date'] = chiffredaffaire_a_date.index.month*100+chiffredaffaire_a_date.index.day\n",
     "chiffredaffaire_a_date = chiffredaffaire_a_date[chiffredaffaire_a_date['a_date'] < last_date.month*100+last_date.day]\n",
     "del chiffredaffaire_a_date['a_date']\n",
-    "chiffredaffaire_a_date = chiffredaffaire_a_date.resample('YE').sum()\n",
+    "chiffredaffaire_a_date = chiffredaffaire_a_date.resample('Y').sum()\n",
     "chiffredaffaire_a_date.index = chiffredaffaire_a_date.index.year\n",
     "chiffredaffaire_a_date\n",
     "libelle_a_date = \"à date du %02d/%02d\" % (last_date.day, last_date.month)\n",
