Ratio des formés référents/non formés

--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -21,6 +21,7 @@
     "services_baristas_annule = pd.read_csv(os.path.dirname(os.path.realpath(__file__))+\"/../calendar/baristas.csv\", sep=\";\",decimal=',',low_memory=False, index_col=False)\n",
     "services_baristas_annule['Mois'] = pd.to_datetime(services_baristas_annule['date'].apply(lambda x: x[0:7]+'-01'))\n",
     "services_baristas_annule['Date'] = pd.to_datetime(services_baristas_annule['date'])\n",
+    "services_baristas_annule['Week'] = services_baristas_annule['Date'].apply(lambda x: \"%d-%02d\" % (x.year, x.week))\n",
     "del services_baristas_annule['date']\n",
     "\n",
     "limit_year = None\n",
@@ -41,6 +42,13 @@
     "services_baristas_annule['nom'] = services_baristas_annule['nom_telephone'].combine_first(services_baristas_annule['nom'])\n",
     "services_baristas_annule['nom_tel'] = services_baristas_annule['nom'].fillna('') + services_baristas_annule['telephone'].fillna('')\n",
     "services_baristas_annule['barista_hash'] = services_baristas_annule['nom_tel'].apply(lambda x: hashlib.md5(x.encode()).hexdigest())\n",
+    "\n",
+    "is_ref = dict()\n",
+    "for i in range(0, len(services_baristas_annule)):\n",
+    "    if (services_baristas_annule.loc[i, 'role'] == 'REFERENT'):\n",
+    "        is_ref[services_baristas_annule.loc[i, 'barista_hash']] = True\n",
+    "    services_baristas_annule.loc[i, 'is_ref'] = (is_ref.get(services_baristas_annule.loc[i, 'barista_hash']) == True)\n",
+    "\n",
     "del services_baristas_annule['nom_telephone']\n",
     "del services_baristas_annule['telephone_nom']\n",
     "del services_baristas_annule['nom_tel']"
@@ -204,6 +212,71 @@
     "fig = px.bar(services['count'])\n",
     "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
     "dt.fig_save_or_show(fig, 'baristas_06_nb_referents_par_mois', limit_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10d27d27-7e54-483e-bff2-5d29072d8cf4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "services = services_baristas[services_baristas['is_ref']].groupby(['Week'])[['role']].count().rename(columns= {'role': 'nb_services_ref'})\n",
+    "services = pd.concat([\n",
+    "    services, \n",
+    "    services_baristas[services_baristas['is_ref'] != True].groupby(['Week'])[['role']].count().rename(columns= {'role': 'nb_services_non_ref'})\n",
+    "])\n",
+    "services['nb_services_ref']\n",
+    "services['nb_services'] = services['nb_services_ref'].fillna(0) + services['nb_services_non_ref'].fillna(0)\n",
+    "services['type'] = services['nb_services_ref'].fillna(0).apply(lambda a: 'ref'  if (a>0) else 'non ref')\n",
+    "services = services[services.index >= '%d-%s' % (int(max(services.index)[:4]) - 1, max(services.index)[5:])]\n",
+    "\n",
+    "services = services[['nb_services', 'type']]\n",
+    "services = services.reset_index()\n",
+    "services['semaine'] = services['Week'].apply(lambda x : 'Semaine %s (%s)' % (x[5:], x[:4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd35800a-b26a-409d-a890-03406c8dc8c5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.bar(services, y=\"nb_services\", x='semaine', color='type', barmode = 'stack')\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
+    "dt.fig_save_or_show(fig, 'baristas_09_nb_ref_non_ref', limit_year)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4af0dd5c-bacc-4937-9cfc-af61c716620f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "services = services_baristas[services_baristas['is_ref']].groupby('Week')[['role']].count().rename(columns= {'role': 'nb_services_ref'})\n",
+    "services = services.join(services_baristas[services_baristas['is_ref'] != True].groupby(['Week'])[['role']].count().rename(columns= {'role': 'nb_services_non_ref'}))\n",
+    "services['pourcentage_ref'] = services['nb_services_ref'] * 100 / (services['nb_services_ref'] + services['nb_services_non_ref'])\n",
+    "services = pd.concat([services[['pourcentage_ref']], services[['pourcentage_ref']].rename(columns={'pourcentage_ref': 'pourcentage_non_ref'}).apply(lambda x: 100 -x)])\n",
+    "services['pourcentage'] = services['pourcentage_ref'].fillna(0) + services['pourcentage_non_ref'].fillna(0)\n",
+    "services['type'] = services['pourcentage_ref'].fillna(0).apply(lambda a: 'ref'  if (a>0) else 'non ref')\n",
+    "services = services[services.index >= '%d-%s' % (int(max(services.index)[:4]) - 1, max(services.index)[5:])]\n",
+    "services = services[['pourcentage', 'type']]\n",
+    "services = services.reset_index()\n",
+    "services['semaine'] = services['Week'].apply(lambda x : 'Semaine %s (%s)' % (x[5:], x[:4]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b585355-ed0b-408e-9a8f-9dffd8e3ae7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = px.bar(services, y=\"pourcentage\", x='semaine', color='type', barmode = 'stack')\n",
+    "fig.update_layout(showlegend=False,xaxis_title=None,yaxis_title=None)\n",
+    "dt.fig_save_or_show(fig, 'baristas_09_pc_ref_non_ref', limit_year)"
    ]
   },
   {
