--- a/notebook/adhesions.ipynb
+++ b/notebook/adhesions.ipynb
@@ -58,7 +58,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "limit_date = max(adhésions.index) + relativedelta(months=-1)\n",
+    "if limit_year:\n",
+    "    limit_date = max(adhésions.index) + relativedelta(years=-1)\n",
+    "else:\n",
+    "    limit_date = max(adhésions.index) + relativedelta(months=-1)\n",
     "adhésions_last_month = adhésions[adhésions.index.to_period(\"M\") >= str(limit_date.year)+'-'+str(limit_date.month)]\n",
     "adhésions_last_month = adhésions_last_month.resample('D').sum().rename(columns={'price': 'Nb d\\'adhésion'})\n",
     "adhésions_last_month['évènement'] = adhésions_last_month.index.strftime('%Y-%m-%d').map(d2e).fillna('<aucun>')\n",
