--- a/notebook/baristas.ipynb
+++ b/notebook/baristas.ipynb
@@ -258,7 +258,7 @@
     "services = services_baristas[services_baristas['is_ref']].groupby('Week')[['role']].count().rename(columns= {'role': 'nb_services_ref'})\n",
     "services = services.join(services_baristas[services_baristas['is_ref'] != True].groupby(['Week'])[['role']].count().rename(columns= {'role': 'nb_services_non_ref'}))\n",
     "services['pourcentage_ref'] = services['nb_services_ref'] * 100 / (services['nb_services_ref'] + services['nb_services_non_ref'])\n",
-    "services = pd.concat([services[['pourcentage_ref']], services[['pourcentage_ref']].rename(columns={'pourcentage_ref': 'pourcentage_non_ref'}).apply(lambda x: 100 -x)])\n",
+    "services = pd.concat([services[['pourcentage_ref']], services[['pourcentage_ref']].rename(columns={'pourcentage_ref': 'pourcentage_non_ref'}).apply(lambda x: 100 -x if x > 0 else 0)])\n",
     "services['pourcentage'] = services['pourcentage_ref'].fillna(0) + services['pourcentage_non_ref'].fillna(0)\n",
     "services['type'] = services['pourcentage_ref'].fillna(0).apply(lambda a: 'ref'  if (a>0) else 'non ref')\n",
     "services = services[services.index >= '%d-%s' % (int(max(services.index)[:4]) - 1, max(services.index)[5:])]\n",
