--- a/notebook/evenements.ipynb
+++ b/notebook/evenements.ipynb
@@ -33,7 +33,10 @@
     "d2e = events_by_day[events_by_day['titre'] != '']['titre'].to_dict()\n",
     "\n",
     "if dt.is_notebook():\n",
-    "    print(events.head())"
+    "    print(events.head())\n",
+    "\n",
+    "if events.index.empty:\n",
+    "    exit"
    ]
   },
   {
@@ -45,9 +48,10 @@
    "source": [
     "if limit_year:\n",
     "    now = max(events.index)\n",
+    "    limit_date = now + relativedelta(years=-1)\n",
     "else:\n",
     "    now = datetime.now()\n",
-    "limit_date = datetime.now() + relativedelta(months=-1)\n",
+    "    limit_date = now + relativedelta(months=-1)\n",
     "\n",
     "events_par_semaine = events[events.index > str(limit_date)[0:19]]\n",
     "events_par_semaine['titre'] = events_par_semaine['titre'].apply(lambda x: x[:50])\n",
