--- a/notebook/evenements.ipynb
+++ b/notebook/evenements.ipynb
@@ -9,6 +9,7 @@
    "source": [
     "import pandas as pd\n",
     "import os\n",
+    "import sys\n",
     "from datetime import datetime\n",
     "from dateutil.relativedelta import relativedelta \n",
     "import mydashtools as dt\n",
@@ -36,7 +37,7 @@
     "    print(events.head())\n",
     "\n",
     "if events.index.empty:\n",
-    "    exit"
+    "    sys.exit()"
    ]
   },
   {
